<resources>
    <string name="app_name">mathquiz</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="player">Player</string>
    <string name="player_name">Player Name</string>
    <string name="_00">00</string>
    <string name="operator">X</string>
    <string name="options">options = ?</string>
    <string name="check_your_answer">Check Your Answer</string>
</resources>