<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:background="#235"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textColor="#f90"
        android:textSize="46sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/logo_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_marginRight="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/nameET"
            android:background="#7000"
            android:textColor="@color/textColor"
            android:textColorHint="#ccc"
            android:padding="20dp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:id="@+id/submitBT"
            android:background="#d70"/>

    </LinearLayout>

</LinearLayout>